// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalize should default to all rules 1`] = `
Object {
  "::-webkit-file-upload-button": Object {
    "font": "inherit",
    "webkitAppearance": "button",
  },
  "[hidden]": Object {
    "display": "none",
  },
  "[type=\\"checkbox\\"],
  [type=\\"radio\\"]": Object {
    "boxSizing": "border-box",
    "padding": "0",
  },
  "[type=\\"number\\"]::-webkit-inner-spin-button,
  [type=\\"number\\"]::-webkit-outer-spin-button": Object {
    "height": "auto",
  },
  "[type=\\"search\\"]": Object {
    "outlineOffset": "-2px",
    "webkitAppearance": "textfield",
  },
  "[type=\\"search\\"]::-webkit-search-decoration": Object {
    "webkitAppearance": "none",
  },
  "a": Object {
    "background-color": "transparent",
  },
  "a:active,
  a:hover": Object {
    "outlineWidth": "0",
  },
  "abbr[title]": Array [
    Object {
      "borderBottom": "none",
      "textDecoration": "underline",
    },
    Object {
      "textDecoration": "underline dotted",
    },
  ],
  "b,
  strong": Object {
    "fontWeight": "bolder",
  },
  "body": Object {
    "margin": "0",
  },
  "button,
  html [type=\\"button\\"],
  [type=\\"reset\\"],
  [type=\\"submit\\"]": Object {
    "webkitAppearance": "button",
  },
  "button,
  input": Object {
    "overflow": "visible",
  },
  "button,
  input,
  optgroup,
  select,
  textarea": Object {
    "fontFamily": "sans-serif",
    "fontSize": "100%",
    "lineHeight": "1.15",
    "margin": "0",
  },
  "button,
  select": Object {
    "textTransform": "none",
  },
  "button:-moz-focusring,
  [type=\\"button\\"]:-moz-focusring,
  [type=\\"reset\\"]:-moz-focusring,
  [type=\\"submit\\"]:-moz-focusring": Object {
    "outline": "1px dotted ButtonText",
  },
  "button::-moz-focus-inner,
  [type=\\"button\\"]::-moz-focus-inner,
  [type=\\"reset\\"]::-moz-focus-inner,
  [type=\\"submit\\"]::-moz-focus-inner": Object {
    "borderStyle": "none",
    "padding": "0",
  },
  "code,
  kbd,
  samp": Object {
    "fontFamily": "monospace, monospace",
    "fontSize": "1em",
  },
  "details": Object {
    "display": "block",
  },
  "fieldset": Object {
    "padding": "0.35em 0.625em 0.75em",
  },
  "h1": Object {
    "fontSize": "2em",
    "margin": "0.67em 0",
  },
  "hr": Object {
    "boxSizing": "content-box",
    "height": "0",
    "overflow": "visible",
  },
  "html": Object {
    "fontFamily": "sans-serif",
    "lineHeight": "1.15",
    "textSizeAdjust": "100%",
  },
  "img": Object {
    "borderStyle": "none",
  },
  "legend": Object {
    "boxSizing": "border-box",
    "color": "inherit",
    "display": "table",
    "maxWidth": "100%",
    "padding": "0",
    "whiteSpace": "normal",
  },
  "pre": Object {
    "fontFamily": "monospace, monospace",
    "fontSize": "1em",
  },
  "progress": Object {
    "verticalAlign": "baseline",
  },
  "small": Object {
    "fontSize": "80%",
  },
  "sub": Object {
    "bottom": "-0.25em",
  },
  "sub,
  sup": Object {
    "fontSize": "75%",
    "lineHeight": "0",
    "position": "relative",
    "verticalAlign": "baseline",
  },
  "summary": Object {
    "display": "list-item",
  },
  "sup": Object {
    "top": "-0.5em",
  },
  "template": Object {
    "display": "none",
  },
  "textarea": Object {
    "overflow": "auto",
  },
}
`;

exports[`normalize should only return unopinionated rules, when passed true 1`] = `
Object {
  "::-webkit-file-upload-button": Object {
    "font": "inherit",
    "webkitAppearance": "button",
  },
  "[hidden]": Object {
    "display": "none",
  },
  "[type=\\"checkbox\\"],
  [type=\\"radio\\"]": Object {
    "boxSizing": "border-box",
    "padding": "0",
  },
  "[type=\\"number\\"]::-webkit-inner-spin-button,
  [type=\\"number\\"]::-webkit-outer-spin-button": Object {
    "height": "auto",
  },
  "[type=\\"search\\"]": Object {
    "outlineOffset": "-2px",
    "webkitAppearance": "textfield",
  },
  "[type=\\"search\\"]::-webkit-search-decoration": Object {
    "webkitAppearance": "none",
  },
  "a": Object {
    "background-color": "transparent",
  },
  "abbr[title]": Array [
    Object {
      "borderBottom": "none",
      "textDecoration": "underline",
    },
    Object {
      "textDecoration": "underline dotted",
    },
  ],
  "b,
  strong": Object {
    "fontWeight": "bolder",
  },
  "body": Object {
    "margin": "0",
  },
  "button,
  html [type=\\"button\\"],
  [type=\\"reset\\"],
  [type=\\"submit\\"]": Object {
    "webkitAppearance": "button",
  },
  "button,
  input": Object {
    "overflow": "visible",
  },
  "button,
  input,
  optgroup,
  select,
  textarea": Object {
    "fontFamily": "inherit",
    "fontSize": "100%",
    "lineHeight": "1.15",
    "margin": "0",
  },
  "button,
  select": Object {
    "textTransform": "none",
  },
  "button:-moz-focusring,
  [type=\\"button\\"]:-moz-focusring,
  [type=\\"reset\\"]:-moz-focusring,
  [type=\\"submit\\"]:-moz-focusring": Object {
    "outline": "1px dotted ButtonText",
  },
  "button::-moz-focus-inner,
  [type=\\"button\\"]::-moz-focus-inner,
  [type=\\"reset\\"]::-moz-focus-inner,
  [type=\\"submit\\"]::-moz-focus-inner": Object {
    "borderStyle": "none",
    "padding": "0",
  },
  "code,
  kbd,
  samp": Object {
    "fontFamily": "monospace, monospace",
    "fontSize": "1em",
  },
  "details": Object {
    "display": "block",
  },
  "fieldset": Object {
    "padding": "0.35em 0.625em 0.75em",
  },
  "h1": Object {
    "fontSize": "2em",
    "margin": "0.67em 0",
  },
  "hr": Object {
    "boxSizing": "content-box",
    "height": "0",
    "overflow": "visible",
  },
  "html": Object {
    "lineHeight": "1.15",
    "textSizeAdjust": "100%",
  },
  "img": Object {
    "borderStyle": "none",
  },
  "legend": Object {
    "boxSizing": "border-box",
    "color": "inherit",
    "display": "table",
    "maxWidth": "100%",
    "padding": "0",
    "whiteSpace": "normal",
  },
  "pre": Object {
    "fontFamily": "monospace, monospace",
    "fontSize": "1em",
  },
  "progress": Object {
    "verticalAlign": "baseline",
  },
  "small": Object {
    "fontSize": "80%",
  },
  "sub": Object {
    "bottom": "-0.25em",
  },
  "sub,
  sup": Object {
    "fontSize": "75%",
    "lineHeight": "0",
    "position": "relative",
    "verticalAlign": "baseline",
  },
  "summary": Object {
    "display": "list-item",
  },
  "sup": Object {
    "top": "-0.5em",
  },
  "template": Object {
    "display": "none",
  },
  "textarea": Object {
    "overflow": "auto",
  },
}
`;
